[project]
name = "froide_legalaction"
readme = "README.md"
description = ""
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
version = "0.0.1"
dependencies = ["django-fsm"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["froide_legalaction*"]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "django",
  "third-party",
  "froide",
  "first-party",
  "local-folder",
]
default-section = "third-party"
known-local-folder = ["froide"]

[tool.ruff.lint.isort.sections]
django = ["django"]
froide = ["froide"]

[tool.djlint]
ignore = "T002,T003,H005,H006,H021,H023,H029,H030,H031"
custom_blocks = "cache"
ignore_blocks = "thumbnail"
