[project]
name = "froide_legalaction"
readme = "README.md"
description = ""
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
version = "0.0.1"
dependencies = [
  "django>=5.1,<6",
  "froide @ git+https://github.com/okfde/froide.git@main",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["froide_legalaction*"]

[tool.ruff]
exclude = ["migrations", "build", "node_modules"]

[tool.ruff.lint]
ignore = ["E501", "C901"]
select = ["C", "E", "F", "W", "B", "I001"]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "django",
  "third-party",
  "froide",
  "first-party",
  "local-folder",
]
default-section = "third-party"
known-local-folder = ["froide_legalaction"]

[tool.ruff.lint.isort.sections]
django = ["django"]
froide = ["froide"]

[tool.djlint]
ignore = "T002,T003,H005,H006,H021,H023,H029,H030,H031"
custom_blocks = "cache"
ignore_blocks = "thumbnail"
